maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:13: error: not found: value prendBisctui
  prendBisctui()
  ^